--- a/src/pages/pag7.astro
+++ b/src/pages/pag7.astro
@@ -9,35 +9,35 @@ import { Image } from 'astro:assets';
 	<main>
 		<ChapterSection
 			title="Análisis de Señales"
-			content= "El análisis de señales es fundamental en el diseño de circuitos electrónicos de comunicaciones, donde es necesario evaluar la distribución de potencia y la composición de frecuencias de la señal de información."
+			content="El análisis de señales es fundamental en el diseño de circuitos electrónicos de comunicaciones, donde es necesario evaluar la distribución de potencia y la composición de frecuencias de la señal de información."
 		/>
 
 		<p><b>Señales Senoidales</b></p>
 		<p>El análisis de señales implica el análisis matemático de frecuencia, longitud de onda y valor de voltaje de una señal. Las señales eléctricas, variaciones de voltaje o corriente respecto al tiempo, se pueden representar por ondas seno o coseno.</p>
 		<br>
 		<p>Descripción Matemática de una Onda Senoidal:</p>
-		<ul class="list-disc">
-			<li class="ml-16">v(t)=Vsin(2πft+θ)</li>
-			<li class="ml-16">v(t)=Vcos(2πft+θ)</li>
-			<li class="ml-16">i(t)=Isin(2πft+θ)</li>
-			<li class="ml-16">i(t)=Icos(2πft+θ)</li>
+		<ul class="list-disc ml-4 md:ml-16">
+			<li>v(t) = Vsin(2πft + θ)</li>
+			<li>v(t) = Vcos(2πft + θ)</li>
+			<li>i(t) = Isin(2πft + θ)</li>
+			<li>i(t) = Icos(2πft + θ)</li>
 		</ul>
 		<br>
 		<p>Donde:</p>
-		<ul class="list-disc">
-			<li class="ml-16">v(t): Voltaje de la onda senoidal, variable respecto al tiempo </li>
-			<li class="ml-16">i(t): Corriente de la onda senoidal, variable respecto al tiempo</li>
-			<li class="ml-16">V: Voltaje máximo (volts)</li>
-			<li class="ml-16">f: Frecuencia (hertz)</li>
-			<li class="ml-16">θ: Desplazamiento de fase (radianes)</li>
-			<li class="ml-16">I: Corriente máxima (amperes)</li>
-			<li class="ml-16">2πf=ω: Velocidad angular (radianes por segundo)</li>
+		<ul class="list-disc ml-4 md:ml-16">
+			<li>v(t): Voltaje de la onda senoidal, variable respecto al tiempo</li>
+			<li>i(t): Corriente de la onda senoidal, variable respecto al tiempo</li>
+			<li>V: Voltaje máximo (volts)</li>
+			<li>f: Frecuencia (hertz)</li>
+			<li>θ: Desplazamiento de fase (radianes)</li>
+			<li>I: Corriente máxima (amperes)</li>
+			<li>2πf = ω: Velocidad angular (radianes por segundo)</li>
 		</ul>
 		<br>
 		<p>Es importante observar que una onda senoidal se puede representar como una onda cosenoidal desplazada en fase:</p>
-		<ul class="list-disc">
-			<li class="ml-16">sinθ=cos(θ−90∘)</li>
-			<li class="ml-16">cosθ=sin(θ+90∘)</li>
+		<ul class="list-disc ml-4 md:ml-16">
+			<li>sinθ = cos(θ−90∘)</li>
+			<li>cosθ = sin(θ+90∘)</li>
 		</ul>
 		<br>
 		<p><b>Gráfica del dominio del tiempo:</b></p>
@@ -62,36 +62,33 @@ import { Image } from 'astro:assets';
 		<br>		
 
 		<p><b>Serie de Fourier</b></p>
-		<ul class="list-disc">
-
-			<li class="ml-16">Representa las componentes senoidales de una onda periódica no senoidal.</li>
-			<li class="ml-16">Ecuación general: </li>
-				<div class="grid justify-items-center">
-					<img src="media/formula-forier.jpg">
-				</div>
-
-				<br>
-				<div class="grid justify-items-center">
-					<img src="media/coeficientes.jpg">
-				</div>
+		<ul class="list-disc ml-4 md:ml-16">
+			<li>Representa las componentes senoidales de una onda periódica no senoidal.</li>
+			<li>Ecuación general:</li>
+			<div class="grid justify-items-center">
+				<img src="media/formula-forier.jpg">
+			</div>
+			<br>
+			<div class="grid justify-items-center">
+				<img src="media/coeficientes.jpg">
+			</div>
 		</ul>
 
 		<p><b>Simetría de Onda</b></p>
-		<ul class="list-disc">
-
-			<li class="ml-16">Simetría Par: Una forma de onda es simétrica respecto al eje vertical (amplitud) y se llama función par. Para todas las funciones pares, los coeficientes B(sub n) de la serie de Fourier son cero.</li>
+		<ul class="list-disc ml-4 md:ml-16">
+			<li>Simetría Par: Una forma de onda es simétrica respecto al eje vertical (amplitud) y se llama función par. Para todas las funciones pares, los coeficientes B(sub n) de la serie de Fourier son cero.</li>
 			<br>
 			<div class="grid justify-items-center">
 				<img src="media/simetria-par.jpg">
 			</div>
 			<br>
-			<li class="ml-16">Simetría Impar: Una forma de onda es simétrica respecto al origen y se llama función impar. Para todas las funciones impares, los coeficientes  A(sub n) de la serie de Fourier son cero.</li>
+			<li>Simetría Impar: Una forma de onda es simétrica respecto al origen y se llama función impar. Para todas las funciones impares, los coeficientes A(sub n) de la serie de Fourier son cero.</li>
 			<br>
 			<div class="grid justify-items-center">
 				<img src="media/simetria-impar.jpg">
 			</div>
 			<br>
-			<li class="ml-16">Simetría de Media Onda: Si una forma de onda tiene la misma forma pero con signo contrario en el segundo medio ciclo respecto al primero, se dice que tiene simetría de media onda. Para estas ondas, las armónicas pares de la serie de Fourier son cero.</li>
+			<li>Simetría de Media Onda: Si una forma de onda tiene la misma forma pero con signo contrario en el segundo medio ciclo respecto al primero, se dice que tiene simetría de media onda. Para estas ondas, las armónicas pares de la serie de Fourier son cero.</li>
 			<br>
 			<div class="grid justify-items-center">
 				<img src="media/simetria-media-onda.jpg">
@@ -103,23 +100,20 @@ import { Image } from 'astro:assets';
 			<img src="media/Tabla 1-3.jpg">
 		</div>
 
-
 		<br>
 		<p><b>Serie de Fourier para una forma de onda rectangular:</b></p>
 		<p>Forma de Onda Rectangular:</p>
 		<div class="grid justify-items-center">
 			<img src="media/forma-rectangular.jpg">
 		</div>
-		<ul class="list-disc">
-
-			<li class="ml-16">Ciclo de Trabajo (DC):</li>
+		<ul class="list-disc ml-4 md:ml-16">
+			<li>Ciclo de Trabajo (DC):</li>
 			<br>
 			<div class="grid justify-items-center">
 				<img src="media/DC.jpg">
 			</div>
 			<br>
-			
-			<li class="ml-16">Serie de Fourier: La onda rectangular está constituida por una serie de ondas senoidales relacionadas armónicamente. La serie de Fourier para una onda rectangular es:</li>
+			<li>Serie de Fourier: La onda rectangular está constituida por una serie de ondas senoidales relacionadas armónicamente. La serie de Fourier para una onda rectangular es:</li>
 			<br>
 			<div class="grid justify-items-center">
 				<img src="media/fourier-rectangular.jpg">
@@ -139,34 +133,24 @@ import { Image } from 'astro:assets';
 			<img src="media/25 porciento.jpg">
 		</div>
 
-
 		<br>
 		<p class="text-center"><b>Transformadas de Fourier Discreta y Rápida</b></p>
 		<br>
-		<p>La <b>Transformada Discreta de Fourier (DFT)</b> convierte una señal en el dominio del tiempo en una representación en el dominio de la frecuencia. Esta técnica es esencial para analizar señales que no pueden definirse fácilmente con ecuaciones matemáticas. La DFT es computacionalmente intensiva, con un tiempo de cálculo proporcional a n2, donde n es el número de muestras.</p>
+		<p>La <b>Transformada Discreta de Fourier (DFT)</b> convierte una señal en el dominio del tiempo en una representación en el dominio de la frecuencia. Esta técnica es esencial para analizar señales que no pueden definirse fácilmente con ecuaciones matemáticas. La DFT es computacionalmente intensiva, con un tiempo de cálculo proporcional a n², donde n es el número de muestras.</p>
 		<br>
-		<p>La <b>Transformada Rápida de Fourier (FFT)</b> es una versión optimizada de la DFT, que reduce el tiempo de cálculo a nlog 2n. La FFT permite un análisis en tiempo real y es ampliamente utilizada en sistemas de comunicaciones modernas.</p>
+		<p>La <b>Transformada Rápida de Fourier (FFT)</b> es una versión optimizada de la DFT, que reduce el tiempo de cálculo a n log₂ n. La FFT permite un análisis en tiempo real y es ampliamente utilizada en sistemas de comunicaciones modernas.</p>
 
 		<br>
 		<p class="text-center"><b>Efectos de Limitación de Banda sobre las Señales</b></p>
-	<p>La limitación de banda en un canal de comunicaciones tiene un impacto significativo en la señal transmitida. Al pasar una señal no senoidal por un filtro pasabajas, se eliminan los componentes de frecuencia superiores a la frecuencia de corte del filtro, lo que puede distorsionar la forma de la señal original.</p>
-	<br>
+		<p>La limitación de banda en un canal de comunicaciones tiene un impacto significativo en la señal transmitida. Al pasar una señal no senoidal por un filtro pasabajas, se eliminan los componentes de frecuencia superiores a la frecuencia de corte del filtro, lo que puede distorsionar la forma de la señal original.</p>
+		<br>
 	
-	<p>Un canal de comunicaciones puede considerarse como un filtro pasabajas ideal con una fase lineal y un ancho de banda finito. Por ejemplo, una onda cuadrada que pasa por un filtro con una frecuencia de corte de 8 kHz perderá las frecuencias superiores a la octava armónica, lo que alterará su forma de onda.</p>
-	<br>
-	<p><b>Concepto Visual:</b></p>
-	<ul class="list-disc">
-		<li class="ml-16"><b>Forma de Onda Filtrada:</b> Al pasar por filtros con frecuencias de corte de 8 kHz, 6 kHz, 4 kHz y 2 kHz, la forma de la onda se modifica significativamente, eliminando las armónicas superiores y suavizando la señal.
-			Para ilustrar estos conceptos en tu blog, asegúrate de incluir capturas de las fórmulas y diagramas relevantes que se encuentran en el libro para proporcionar un contexto visual claro y preciso.</li>
-	</ul>
-
-
-
-
-
-
-
-
+		<p>Un canal de comunicaciones puede considerarse como un filtro pasabajas ideal con una fase lineal y un ancho de banda finito. Por ejemplo, una onda cuadrada que pasa por un filtro con una frecuencia de corte de 8 kHz perderá las frecuencias superiores a la octava armónica, lo que alterará su forma de onda.</p>
+		<br>
+		<p><b>Concepto Visual:</b></p>
+		<ul class="list-disc ml-4 md:ml-16">
+			<li><b>Forma de Onda Filtrada:</b> Al pasar por filtros con frecuencias de corte de 8 kHz, 6 kHz, 4 kHz y 2 kHz, la forma de la onda se modifica significativamente, eliminando las armónicas superiores y suavizando la señal. Para ilustrar estos conceptos en tu blog, asegúrate de incluir capturas de las fórmulas y diagramas relevantes que se encuentran en el libro para proporcionar un contexto visual claro y preciso.</li>
+		</ul>
 
 		<div class="navigation-buttons">
 			<a href="/pag6" class="button">Atrás</a>
@@ -191,6 +175,7 @@ import { Image } from 'astro:assets';
 		justify-content: space-between;
 		margin-top: 2rem;
 	}
+
 	.button {
 		padding: 0.5rem 1rem;
 		background-color: #007BFF;
@@ -198,6 +183,7 @@ import { Image } from 'astro:assets';
 		text-decoration: none;
 		border-radius: 4px;
 	}
+
 	.button:hover {
 		background-color: #0056b3;
 	}
